# flask_build_service

./: README.md  app.py  requirements.txt  run.sh  run_tests.sh
project/: __init__.py  actions.py
tests/integration/: test_integration.py
tests/unit/: test_actions.py
tests/unit/cmake_example_project/: CMakeLists.txt
tests/unit/cmake_example_project/include/: main.h
tests/unit/cmake_example_project/src/: main.cpp
tests/unit/cmake_example_wrong_project/src/: main.cpp
